--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-scripts": "^1.1.4"
   },
   "dependencies": {
+    "@material-ui/core": "^1.0.0",
     "babel-polyfill": "^6.26.0",
     "cross-fetch": "^2.2.0",
     "prop-types": "^15.6.1",
