--- a/v3/package.json
+++ b/v3/package.json
@@ -15,6 +15,7 @@
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
+    "recompose": "^0.27.1",
     "redux": "^4.0.0",
     "redux-form": "^7.3.0",
     "redux-logger": "^3.0.6",
